Add module opens to fix tests failed in Java 17